--- a/Upcoming-match.html
+++ b/Upcoming-match.html
@@ -28,7 +28,7 @@
                 <a class="btn" href="">Watch Live <i class="fa-solid fa-angle-right"></i></a>
             </div>
             <div class="banner-img">
-                <img src="/assets/Banner Image.png" alt="">
+                <img src="./assets/Banner Image.png" alt="">
             </div>
         </div>
     </section>
@@ -43,9 +43,9 @@
         <div class="flags">
             <div class="flag">
                 <div class="flag-image">
-                    <img src="/assets/Flag.png" alt="">
+                    <img src="./assets/Flag.png" alt="">
                     <p>VS</p>
-                    <img src="/assets/germany Flag.png" alt="">
+                    <img src="./assets/germany Flag.png" alt="">
                 </div>
                 <div class="match-info">
                     <h3>Germany VS France</h3>
@@ -55,9 +55,9 @@
             </div>
             <div class="flag">
                 <div class="flag-image">
-                    <img src="/assets/Flag.png" alt="">
+                    <img src="./assets/Flag.png" alt="">
                     <p>vs</p>
-                    <img src="/assets/germany Flag.png" alt="">
+                    <img src="./assets/germany Flag.png" alt="">
                 </div>
                 <div class="match-info">
                     <h3>Germany VS France</h3>
@@ -67,9 +67,9 @@
             </div>
             <div class="flag">
                 <div class="flag-image">
-                    <img src="/assets/Flag.png" alt="">
+                    <img src="./assets/Flag.png" alt="">
                     <p>vs</p>
-                    <img src="/assets/germany Flag.png" alt="">
+                    <img src="./assets/germany Flag.png" alt="">
                 </div>
                 <div class="match-info">
                     <h3>Germany VS France</h3>
@@ -79,9 +79,9 @@
             </div>
             <div class="flag">
                 <div class="flag-image">
-                    <img src="/assets/Flag.png" alt="">
+                    <img src="./assets/Flag.png" alt="">
                     <p>vs</p>
-                    <img src="/assets/germany Flag.png" alt="">
+                    <img src="./assets/germany Flag.png" alt="">
                 </div>
                 <div class="match-info">
                     <h3>Germany VS France</h3>
@@ -91,9 +91,9 @@
             </div>
             <div class="flag">
                 <div class="flag-image">
-                    <img src="/assets/Flag.png" alt="">
+                    <img src="./assets/Flag.png" alt="">
                     <p>vs</p>
-                    <img src="/assets/germany Flag.png" alt="">
+                    <img src="./assets/germany Flag.png" alt="">
                 </div>
                 <div class="match-info">
                     <h3>Germany VS France</h3>
@@ -103,9 +103,9 @@
             </div>
             <div class="flag">
                 <div class="flag-image">
-                    <img src="/assets/Flag.png" alt="">
+                    <img src="./assets/Flag.png" alt="">
                     <p>vs</p>
-                    <img src="/assets/germany Flag.png" alt="">
+                    <img src="./assets/germany Flag.png" alt="">
                 </div>
                 <div class="match-info">
                     <h3>Germany VS France</h3>
