--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <a class="btn" href="">Watch Live <i class="fa-solid fa-angle-right"></i></a>
             </div>
             <div class="banner-img">
-                <img src="/assets/Banner Image.png" alt="">
+                <img src="./assets/Banner Image.png" alt="">
             </div>
         </div>
     </section>
@@ -45,14 +45,14 @@
         <div class="blogs">
             <div class="blog">
                 <div class="blog-image">
-                    <img src="/assets/Blog Image.png" alt="">
+                    <img src="./assets/Blog Image.png" alt="">
                 </div>
                 <div class="blog-info">
                     <p>Transfer</p>
                     <h2>Transfer Live: Neymar offered, Kounde price revealed, Kimpembe options.</h2>
                     <div class="icons">
                         <p><i class="fa-solid fa-clock"></i>10h</p>
-                        <p><img src="/assets/Chat Icon.png" alt="">23</p>
+                        <p><img src="./assets/Chat Icon.png" alt="">23</p>
                     </div>
                 </div>
 
@@ -60,14 +60,14 @@
 
             <div class="blog">
                 <div class="blog-image">
-                    <img src="/assets/Blog Image.png" alt="">
+                    <img src="./assets/Blog Image.png" alt="">
                 </div>
                 <div class="blog-info">
                     <p>Transfer</p>
                     <h2>Transfer Live: Neymar offered, Kounde price revealed, Kimpembe options.</h2>
                     <div class="icons">
                         <p><i class="fa-solid fa-clock"></i>10h</p>
-                        <p><img src="/assets/Chat Icon.png" alt="">23</p>
+                        <p><img src="./assets/Chat Icon.png" alt="">23</p>
                     </div>
                 </div>
 
@@ -75,14 +75,14 @@
 
             <div class="blog">
                 <div class="blog-image">
-                    <img src="/assets/Blog Image.png" alt="">
+                    <img src="./assets/Blog Image.png" alt="">
                 </div>
                 <div class="blog-info">
                     <p>Transfer</p>
                     <h2>Transfer Live: Neymar offered, Kounde price revealed, Kimpembe options.</h2>
                     <div class="icons">
                         <p><i class="fa-solid fa-clock"></i>10h</p>
-                        <p><img src="/assets/Chat Icon.png" alt="">23</p>
+                        <p><img src="./assets/Chat Icon.png" alt="">23</p>
                     </div>
                 </div>
 
@@ -90,14 +90,14 @@
 
             <div class="blog">
                 <div class="blog-image">
-                    <img src="/assets/Blog Image.png" alt="">
+                    <img src="./assets/Blog Image.png" alt="">
                 </div>
                 <div class="blog-info">
                     <p>Transfer</p>
                     <h2>Transfer Live: Neymar offered, Kounde price revealed, Kimpembe options.</h2>
                     <div class="icons">
                         <p><i class="fa-solid fa-clock"></i>10h</p>
-                        <p><img src="/assets/Chat Icon.png" alt="">23</p>
+                        <p><img src="./assets/Chat Icon.png" alt="">23</p>
                     </div>
                 </div>
 
@@ -105,14 +105,14 @@
 
             <div class="blog">
                 <div class="blog-image">
-                    <img src="/assets/Blog Image.png" alt="">
+                    <img src="./assets/Blog Image.png" alt="">
                 </div>
                 <div class="blog-info">
                     <p>Transfer</p>
                     <h2>Transfer Live: Neymar offered, Kounde price revealed, Kimpembe options.</h2>
                     <div class="icons">
                         <p><i class="fa-solid fa-clock"></i>10h</p>
-                        <p><img src="/assets/Chat Icon.png" alt="">23</p>
+                        <p><img src="./assets/Chat Icon.png" alt="">23</p>
                     </div>
                 </div>
 
@@ -120,7 +120,7 @@
 
             <div class="blog">
                 <div class="blog-image">
-                    <img src="/assets/Blog Image.png" alt="">
+                    <img src="./assets/Blog Image.png" alt="">
                 </div>
                 <div class="blog-info">
                     <p>Transfer</p>
@@ -128,7 +128,7 @@
                     <div class="icons">
                         <p><i class="fa-solid fa-clock"></i>10hr</p>
 
-                        <p><img src="/assets/Chat Icon.png" alt="">23</p>
+                        <p><img src="./assets/Chat Icon.png" alt="">23</p>
                     </div>
                 </div>
 
